[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Palette/EditPalettePopup.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Palette/new_swatch_button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Palette/new_swatch_button_hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Palette/remove_swatch_button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Palette/remove_swatch_button_hover.png" type="Texture" id=5]

[node name="EditPalettePopup" type="WindowDialog"]
visible = true
margin_right = 600.0
margin_bottom = 550.0
rect_min_size = Vector2( 600, 570 )
window_title = "Edit Palette"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 580.0
margin_bottom = 462.0
size_flags_vertical = 3

[node name="EditPaletteColorPicker" type="ColorPicker" parent="VBoxContainer/HBoxContainer"]
margin_right = 290.0
margin_bottom = 462.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 556.0
margin_bottom = 462.0
size_flags_horizontal = 3

[node name="EditPaletteGridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 8

[node name="ColorButtons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 560.0
margin_right = 580.0
margin_bottom = 462.0

[node name="AddSwatchButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/ColorButtons"]
margin_right = 20.0
margin_bottom = 20.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="RemoveSwatchButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/ColorButtons"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="PaletteOptions" type="GridContainer" parent="VBoxContainer"]
margin_top = 470.0
margin_right = 580.0
margin_bottom = 522.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/PaletteOptions"]
margin_top = 5.0
margin_right = 91.0
margin_bottom = 19.0
text = "Color Name:"

[node name="EditPaletteColorNameLineEdit" type="LineEdit" parent="VBoxContainer/PaletteOptions"]
margin_left = 95.0
margin_right = 580.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/PaletteOptions"]
margin_top = 33.0
margin_right = 91.0
margin_bottom = 47.0
text = "Palette Name:"

[node name="EditPaletteNameLineEdit" type="LineEdit" parent="VBoxContainer/PaletteOptions"]
margin_left = 95.0
margin_top = 28.0
margin_right = 580.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="WindowOptionsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 530.0
margin_right = 580.0
margin_bottom = 550.0
size_flags_horizontal = 3

[node name="SpacerControl" type="Control" parent="VBoxContainer/WindowOptionsContainer"]
margin_right = 156.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="EditPaletteSaveButton" type="Button" parent="VBoxContainer/WindowOptionsContainer"]
margin_left = 160.0
margin_right = 201.0
margin_bottom = 20.0
text = "Save"

[node name="SpacerControl2" type="Control" parent="VBoxContainer/WindowOptionsContainer"]
margin_left = 205.0
margin_right = 361.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="EditPaletteCancelButton" type="Button" parent="VBoxContainer/WindowOptionsContainer"]
margin_left = 365.0
margin_right = 419.0
margin_bottom = 20.0
text = "Cancel"

[node name="SpacerControl3" type="Control" parent="VBoxContainer/WindowOptionsContainer"]
margin_left = 423.0
margin_right = 580.0
margin_bottom = 20.0
size_flags_horizontal = 3
[connection signal="color_changed" from="VBoxContainer/HBoxContainer/EditPaletteColorPicker" to="." method="_on_EditPaletteColorPicker_color_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ColorButtons/AddSwatchButton" to="." method="_on_AddSwatchButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ColorButtons/RemoveSwatchButton" to="." method="_on_RemoveSwatchButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/PaletteOptions/EditPaletteColorNameLineEdit" to="." method="_on_EditPaletteColorNameLineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/WindowOptionsContainer/EditPaletteSaveButton" to="." method="_on_EditPaletteSaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/WindowOptionsContainer/EditPaletteCancelButton" to="." method="_on_EditPaletteCancelButton_pressed"]
